--- a/docker/redis/docker-compose.yml
+++ b/docker/redis/docker-compose.yml
@@ -7,8 +7,14 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
 
-  redisinsight:
+  redis-insight:
     image: redis/redisinsight:latest
     container_name: redis-insight
     restart: unless-stopped
@@ -18,7 +24,8 @@ services:
     volumes:
       - redisinsight-data:/db
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
 
 volumes:
   redisinsight-data:
