--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -1,17 +1,35 @@
 version: "3.9"
 
 services:
-  mysql:
+  db:
     image: mysql:9.5.0
-    container_name: mysql-db
+    container_name: mysql-5.0.9
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: test-db
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-
+    networks:
+      - mysql
+      
+  phpmyadmin:
+    image: phpmyadmin:5.2.3
+    restart: always
+    depends_on:
+      - db
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: secret
+    ports:
+      - "8080:80"
+    networks:
+      - mysql  
+      
+networks:
+    mysql:
+        driver: bridge
 volumes:
   mysql_data:
