--- a/vscode/go/launch.json
+++ b/vscode/go/launch.json
@@ -5,12 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Debug Go App",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/main.go",
-            "cwd": "${workspaceFolder}"
+            "mode": "auto", //or set specifically to 'debug' in some cases
+            "program": "${workspaceFolder}",
+            "args": ["serve"],
+
+            // Set default environment variables
+            "env": {
+                "APP_ENV": "dev",
+                "APP_PORT": "8080"
+            }
         }
     ]
 }
