--- a/docker/mssql/docker-compose.yml
+++ b/docker/mssql/docker-compose.yml
@@ -8,15 +8,19 @@ services:
       # default user is "sa"
       SA_PASSWORD: "YourStrong!Passw0rd"
       MSSQL_PID: "Developer"
+      MSSQL_DB_NAME: "test-db"
     ports:
       - "1433:1433"
     volumes:
       # optionally mount a volume for data persistence
       - mssql-data:/var/opt/mssql
+      - ./entrypoint.sh:/entrypoint.sh
+      
     restart: unless-stopped
 
     networks:
       - mssql-network
+    entrypoint: ["/bin/bash", "/entrypoint.sh"]
 
   adminer:
     image: adminer:latest
